--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,23 +55,25 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
+
         <Button
             android:id="@+id/btn_comença"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
             android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/fons_buttons2"
+            android:foregroundGravity="bottom"
             android:text="@string/btninicial"
             android:textColor="#000000"
-            android:layout_gravity="bottom"
-            android:foregroundGravity="bottom"
             android:textSize="30dp" />
     </LinearLayout>
 
