--- a/app/src/main/res/layout/moneda.xml
+++ b/app/src/main/res/layout/moneda.xml
@@ -57,7 +57,7 @@
             android:layout_marginTop="40dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:paddingTop="50dp"
+            android:paddingTop="40dp"
             android:textColor="@android:color/background_dark"
             android:textColorLink="@android:color/background_dark"
             android:textSize="28sp"
@@ -65,4 +65,24 @@
 
     </FrameLayout>
 </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/btn_acabar2"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@drawable/fons_buttons2"
+            android:paddingLeft="20dp"
+            android:text="@string/dbtnacabar"
+            android:textColor="@android:color/background_dark"
+            android:textSize="30sp"
+            android:visibility="invisible" />
+    </LinearLayout>
 </LinearLayout>
