--- a/app/src/main/res/layout/preguntar.xml
+++ b/app/src/main/res/layout/preguntar.xml
@@ -40,9 +40,10 @@
             android:layout_height="305dp"
             android:layout_marginTop="45dp"
             android:background="@android:color/transparent"
-            android:maxLines="8"
-            android:minLines="1"
+            android:isScrollContainer="false"
             android:lineSpacingExtra="0.7mm"
+            android:lines="5"
+            android:maxLength="250"
             android:paddingLeft="10dp"
             android:paddingRight="7dp"
             android:textColor="@android:color/background_dark"
