--- a/app/src/main/res/layout/moneda.xml
+++ b/app/src/main/res/layout/moneda.xml
@@ -4,82 +4,84 @@
     android:background="?attr/colorBackgroundFloating"
     android:layout_centerHorizontal="true"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-    <ImageView
-        android:id="@+id/titlemoneda"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:scaleType="centerInside" />
-</LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-    <FrameLayout
-        android:id="@+id/image_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:fadeScrollbars="false">
-        <!--android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"-->
-
-
-        <ImageView
-            android:id="@+id/fons_moneda"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/mostra_preg" />
-
-        <ImageView
-            android:id="@+id/moneda"
-            android:layout_width="match_parent"
-            android:layout_height="310dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="50dp" />
-
-        <TextView
-            android:id="@+id/stc_pregunta2"
-            android:layout_width="match_parent"
-            android:layout_height="315dp"
-            android:layout_marginBottom="40dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="40dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="40dp"
-            android:textColor="@android:color/background_dark"
-            android:textColorLink="@android:color/background_dark"
-            android:textSize="28sp"
-            android:visibility="invisible" />
-
-    </FrameLayout>
-</LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/titlemoneda"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:scaleType="centerInside" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <FrameLayout
+            android:id="@+id/image_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:fadeScrollbars="false">
+            <!--android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"-->
+
+
+            <ImageView
+                android:id="@+id/fons_moneda"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/mostra_preg" />
+
+            <ImageView
+                android:id="@+id/moneda"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="50dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp" />
+
+            <TextView
+                android:id="@+id/stc_pregunta2"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:layout_marginTop="40dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="40dp"
+                android:textColor="@android:color/background_dark"
+                android:textColorLink="@android:color/background_dark"
+                android:textSize="25sp"
+                android:visibility="invisible" />
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1">
 
         <Button
             android:id="@+id/btn_acabar2"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@drawable/fons_buttons2"
-            android:paddingLeft="20dp"
+            android:background="@drawable/fons_buttons"
             android:text="@string/dbtnacabar"
             android:textColor="@android:color/background_dark"
             android:textSize="30sp"
