--- a/app/src/main/res/layout/preguntar.xml
+++ b/app/src/main/res/layout/preguntar.xml
@@ -13,60 +13,59 @@
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:layout_marginTop="40dp" />
-</LinearLayout><LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_weight="1">
-
-    <FrameLayout
-        android:id="@+id/image_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:fadeScrollbars="false">
-
-        <ImageView
-            android:id="@+id/roda"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/preguntafons" />
-
-        <EditText
-            android:id="@+id/etpregunta"
-            android:layout_width="match_parent"
-            android:layout_height="305dp"
-            android:layout_marginTop="45dp"
-            android:background="@android:color/transparent"
-            android:isScrollContainer="false"
-            android:lineSpacingExtra="0.7mm"
-            android:lines="5"
-            android:maxLength="250"
-            android:paddingLeft="10dp"
-            android:paddingRight="7dp"
-            android:textColor="@android:color/background_dark"
-            android:textSize="21sp" />
-
-    </FrameLayout>
 </LinearLayout>
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
-    <Button
-        android:id="@+id/btn_enviar"
+
+        <FrameLayout
+            android:id="@+id/image_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="40dp"
+            android:fadeScrollbars="false">
+
+            <ImageView
+                android:id="@+id/fonspregunta"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:background="@drawable/preguntafons" />
+
+            <EditText
+                android:id="@+id/etpregunta"
+                android:layout_width="match_parent"
+                android:layout_height="305dp"
+                android:background="@android:color/transparent"
+                android:isScrollContainer="false"
+                android:lineSpacingExtra="0.7mm"
+                android:lines="5"
+                android:maxLength="250"
+                android:paddingLeft="30dp"
+                android:paddingRight="40dp"
+                android:textColor="@android:color/background_dark"
+                android:textSize="21sp" />
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/fons_buttons2"
-        android:text="@string/dbtnenviar"
-        android:textColor="#000000"
-        android:textSize="30sp" />
-        </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/btn_enviar"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/fons_buttons"
+            android:text="@string/dbtnenviar"
+            android:textColor="#000000"
+            android:textSize="30sp" />
+    </LinearLayout>
 
 </LinearLayout>
