--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,15 +22,15 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />-->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
+
         <ImageView
             android:id="@+id/titlemain"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:layout_marginTop="20dp" />
+            android:layout_gravity="center" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -42,16 +42,17 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/stc_explicacio"
                     android:layout_width="match_parent"
-                    android:layout_height="315dp"
-                    android:layout_weight="1.19"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:text="@string/txtinicial"
                     android:textColorLink="@android:color/background_dark"
-                    android:textSize="28sp" />
+                    android:textSize="35sp" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
