--- a/app/src/main/res/layout/moneda.xml
+++ b/app/src/main/res/layout/moneda.xml
@@ -14,8 +14,7 @@
             android:id="@+id/titlemoneda"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
             android:scaleType="centerInside" />
     </LinearLayout>
 
@@ -60,12 +59,12 @@
                 android:layout_marginRight="35dp"
                 android:layout_marginTop="40dp"
                 android:paddingBottom="20dp"
-                android:paddingLeft="20dp"
+                android:paddingLeft="30dp"
                 android:paddingRight="20dp"
                 android:paddingTop="40dp"
                 android:textColor="@android:color/background_dark"
                 android:textColorLink="@android:color/background_dark"
-                android:textSize="25sp"
+                android:textSize="28sp"
                 android:visibility="invisible" />
 
         </FrameLayout>
