--- a/app/src/main/res/layout/mostrar_pregunta.xml
+++ b/app/src/main/res/layout/mostrar_pregunta.xml
@@ -7,14 +7,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:layout_weight="1">
 
         <ImageView
             android:id="@+id/titlecontestacio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
             android:scaleType="centerInside" />
     </LinearLayout>
 
@@ -42,12 +41,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="315dp"
                 android:layout_marginTop="30dp"
-                android:paddingLeft="30dp"
+                android:paddingLeft="40dp"
                 android:paddingRight="30dp"
                 android:paddingTop="30dp"
                 android:textColor="@android:color/background_dark"
                 android:textColorLink="@android:color/background_dark"
-                android:textSize="25sp" />
+                android:textSize="28sp" />
 
         </FrameLayout>
     </LinearLayout>
