--- a/app/src/main/res/layout/moneda.xml
+++ b/app/src/main/res/layout/moneda.xml
@@ -33,22 +33,32 @@
             <!--android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"-->
 
-
             <ImageView
                 android:id="@+id/fons_moneda"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="400dp"
                 android:layout_marginTop="40dp"
-                android:background="@drawable/mostra_preg" />
+                android:background="@drawable/mostra_preg"
+                android:visibility="visible" />
+
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gifmoneda"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/gif" />
 
             <ImageView
                 android:id="@+id/moneda"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="300dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="50dp"
                 android:paddingBottom="20dp"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                android:paddingRight="20dp"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/stc_pregunta2"
@@ -75,7 +85,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_weight="1">
-
+        <FrameLayout
+            android:id="@+id/button_container2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:fadeScrollbars="false">
         <Button
             android:id="@+id/btn_acabar2"
             android:layout_width="match_parent"
@@ -85,5 +101,15 @@
             android:textColor="@android:color/background_dark"
             android:textSize="30sp"
             android:visibility="invisible" />
+            <Button
+                android:id="@+id/btn_voree"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@drawable/fons_buttons"
+                android:text="@string/dbtnvore"
+                android:textColor="@android:color/background_dark"
+                android:textSize="30sp"
+                android:visibility="invisible" />
+        </FrameLayout>
     </LinearLayout>
 </LinearLayout>
